--- a/public/pf/css/style.css
+++ b/public/pf/css/style.css
@@ -268,6 +268,9 @@ li {
 	border-radius: 5px;
 	margin-bottom: 20px;
 }
+.input-botom textarea{
+	height: 80px;
+}
 .sub{
 	width: 100px;
 	margin: 0 auto;
