--- a/public/pf/css/style.css
+++ b/public/pf/css/style.css
@@ -118,24 +118,6 @@ li {
   opacity: .8;
 }
 
-/*--------------------------------
- メインビジュアル
----------------------------------*/
-.main-visual-img {
-  /* height: 700px; */
-  background-image: url();
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-}
-
-.sub-main-visual-img {
-  height: 180px;
-  background-image: url(../img/mv.jpg);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-}
 
 /*--------------------------------
  プロフィール
@@ -178,6 +160,9 @@ li {
   width: 31.74603%;
   margin-right: 1.58730%;
   margin-bottom: 40px;
+}
+
+.works-item a p{
   color: #333;
 }
 
@@ -194,13 +179,13 @@ li {
 }
 
 .works-name {
-  font-size: 12px;
+  font-size: 16px;
   font-weight: bold;
   margin-top: 8px;
 }
 
 .works-info {
-  font-size: 10px;
+  font-size: 14px;
 }
 
 
@@ -234,6 +219,7 @@ li {
 
 .skill-name {
   margin-bottom: 3px;
+  font-size: 16px;
 }
 
 /*--------------------------------
@@ -423,16 +409,6 @@ li {
 
   .header-nav-item a {
     font-size: 12px;
-  }
-
-  /* メインビジュアル */
-  .main-visual-img {
-    height: 60vh;
-    background-image: url(../img/sp_mv.jpg);
-  }
-  .sub-main-visual-img {
-    height: 100px;
-    background-image: url(../img/sp_mv.jpg);
   }
 
   /* プロフィール */
