--- a/public/pf/css/style.css
+++ b/public/pf/css/style.css
@@ -152,6 +152,7 @@ li {
 ---------------------------------*/
 .works-list {
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
   margin-bottom: -40px;
 }
