--- a/public/pf/css/style.css
+++ b/public/pf/css/style.css
@@ -1,78 +1,79 @@
 body {
-  font-family: "Lato","Helvetica Neue",Arial,"Hiragino Kaku Gothic ProN","Hiragino Sans",Meiryo,sans-serif;
-  font-size: 14px;
-  line-height: 1.8;
-  letter-spacing: .8px;
-  color: #333;
+	font-family: "Lato", "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
+	font-size: 14px;
+	line-height: 1.8;
+	letter-spacing: .8px;
+	color: #333;
 }
 
 a {
-  transition: opacity .3s;
-  text-decoration: none;
-  color: #1ca9e3;
+	transition: opacity .3s;
+	text-decoration: none;
+	color: #1ca9e3;
 }
 
 img {
-  max-width: 100%;
-  height: auto;
-  vertical-align: bottom;
-  border-style: none;
+	max-width: 100%;
+	height: auto;
+	vertical-align: bottom;
+	border-style: none;
 }
 
 ul,
 li {
-  list-style: none;
+	list-style: none;
 }
 
 .pc-only {
-  display: block;
+	display: block;
 }
 
 .sp-only {
-  display: none;
+	display: none;
 }
 
 /*--------------------------------
  レイアウト
 ---------------------------------*/
 .section {
-  padding: 80px 0;
+	padding: 80px 0;
 }
 
 .inner {
-  max-width: 1340px;
-  margin: 0 auto;
-  padding: 0 40px;
+	max-width: 1340px;
+	margin: 0 auto;
+	padding: 0 40px;
 }
 
 /*--------------------------------
  見出し
 ---------------------------------*/
 .title {
-  font-size: 34px;
-  font-weight: normal;
-  line-height: 1;
-  margin-bottom: 40px;
-  text-align: center;
-  letter-spacing: .05em;
-  color: #737d6d;
+	font-size: 34px;
+	font-weight: normal;
+	line-height: 1;
+	margin-bottom: 40px;
+	text-align: center;
+	letter-spacing: .05em;
+	color: #737d6d;
 }
 
 .lead {
-  margin-bottom: 30px;
-  text-align: center;
+	margin-bottom: 30px;
+	text-align: center;
 }
 
 /*--------------------------------
 ヘッダー
 ---------------------------------*/
 .header {
-  position: fixed;
-  top: 0;
-  z-index: 1;
-  width: 100%;
-/*  transition: background-color .6s;*/
-  background-color: #737d6d; /*javascriptやるときはここ消す*/
+	position: fixed;
+	top: 0;
+	z-index: 1;
+	width: 100%;
+	/*  transition: background-color .6s;*/
+	background-color: #737d6d;
+	/*javascriptやるときはここ消す*/
 }
 
 /*.header.active {*/
@@ -80,42 +81,42 @@ li {
 /*}*/
 
 .header-inner {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 15px 20px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 15px 20px;
 }
 
 .header-logo {
-  font-size: 20px;
-  font-weight: normal;
-  line-height: 1.2;
-  margin-right: 20px;
-  letter-spacing: .05em;
+	font-size: 20px;
+	font-weight: normal;
+	line-height: 1.2;
+	margin-right: 20px;
+	letter-spacing: .05em;
 }
 
 .header-logo a {
-  color: #fff;
+	color: #fff;
 }
 
 .header-nav-list {
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 }
 
 .header-nav-item:not(:last-child) {
-  margin-right: 20px;
+	margin-right: 20px;
 }
 
 .header-nav-item a {
-  font-size: 13px;
-  padding: 5px 0;
-  letter-spacing: .1em;
-  color: #fff;
+	font-size: 13px;
+	padding: 5px 0;
+	letter-spacing: .1em;
+	color: #fff;
 }
 
 .header-nav-item a:hover {
-  opacity: .8;
+	opacity: .8;
 }
 
 
@@ -123,25 +124,25 @@ li {
  プロフィール
 ---------------------------------*/
 .profile {
-  padding-bottom: 50px;
-  display: flex;
-  justify-content: center;
-  gap: 50px;
+	padding-bottom: 50px;
+	display: flex;
+	justify-content: center;
+	gap: 50px;
 }
 
 .profile-title {
-  font-size: 24px;
-  margin-bottom: 20px;
-  text-align: center;
-  color: #737d6d;
+	font-size: 24px;
+	margin-bottom: 20px;
+	text-align: center;
+	color: #737d6d;
 }
 
 .profile-text {
-  max-width: 500px;
-  margin: 0 auto;
+	max-width: 500px;
+	margin: 0 auto;
 }
 
-.profile .face img{
+.profile .face img {
 	max-width: 300px;
 	border-radius: 20px;
 	margin-left: 40px;
@@ -151,42 +152,42 @@ li {
  Works
 ---------------------------------*/
 .works-list {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  margin-bottom: -40px;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	margin-bottom: -40px;
 }
 
 .works-item {
-  width: 31.74603%;
-  margin-right: 1.58730%;
-  margin-bottom: 40px;
+	width: 31.74603%;
+	margin-right: 1.58730%;
+	margin-bottom: 40px;
 }
 
-.works-item a p{
-  color: #333;
+.works-item a p {
+	color: #333;
 }
 
 .works-item:hover {
-  opacity: .9;
+	opacity: .9;
 }
 
 .works-item:nth-of-type(3n) {
-  margin-right: 0;
+	margin-right: 0;
 }
 
 .works-img img {
-  border: 1px solid #e6e6e6;
+	border: 1px solid #e6e6e6;
 }
 
 .works-name {
-  font-size: 16px;
-  font-weight: bold;
-  margin-top: 8px;
+	font-size: 16px;
+	font-weight: bold;
+	margin-top: 8px;
 }
 
 .works-info {
-  font-size: 14px;
+	font-size: 14px;
 }
 
 
@@ -194,158 +195,166 @@ li {
  Skill
 ---------------------------------*/
 .skill-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-bottom: -50px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin-bottom: -50px;
 }
 
 .skill-item {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  width: 48%;
-  margin-bottom: 50px;
+	display: flex;
+	align-items: flex-start;
+	justify-content: space-between;
+	width: 48%;
+	margin-bottom: 50px;
 }
 
 .skill-img {
-  width: 60px;
-  height: auto;
-  margin-right: 20px;
+	width: 60px;
+	height: auto;
+	margin-right: 20px;
 }
 
 .skill-body {
-  flex: 1;
+	flex: 1;
 }
 
 .skill-name {
-  margin-bottom: 3px;
-  font-size: 16px;
+	margin-bottom: 3px;
+	font-size: 16px;
 }
 
 /*--------------------------------
  Contact
 ---------------------------------*/
 .contact-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 .contact-item {
-  display: block;
-  margin: 0 20px;
-  text-align: center;
+	display: block;
+	margin: 0 20px;
+	text-align: center;
 }
 
 .contact-text {
-  margin-top: 10px;
-  text-align: center;
+	margin-top: 10px;
+	text-align: center;
 }
 
-.form-con{
+.form-con {
 	max-width: 600px;
 	margin: 0 auto;
 }
-.form-con .input{
+
+.form-con .input {
 	width: 100%;
 }
-.input-botom{
+
+.input-botom {
 	border: 1px solid #737d6d;
 	border-radius: 5px;
 	margin-bottom: 20px;
 }
-.input-botom textarea{
+
+.input-botom textarea {
 	height: 80px;
 }
-.sub{
+
+.sub {
 	width: 100px;
 	margin: 0 auto;
 	padding: 5px 0;
 	border: 1px solid #333;
 	border-radius: 5px;
 }
-.sub input{
+
+.sub input {
 	display: block;
 	width: 100%;
 }
+
 /*--------------------------------
  ページトップ
 ---------------------------------*/
 .page-top {
-  font-weight: bold;
-  padding: 10px;
-  cursor: pointer;
-  text-align: center;
-  background-color: #e6e6e6;
+	font-weight: bold;
+	padding: 10px;
+	cursor: pointer;
+	text-align: center;
+	background-color: #e6e6e6;
 }
 
 .page-top .material-icons-outlined {
-  vertical-align: bottom;
+	vertical-align: bottom;
 }
 
 /*--------------------------------
  フッター
 ---------------------------------*/
 .footer {
-  padding: 30px;
-  background-color: #737d6d;
+	padding: 30px;
+	background-color: #737d6d;
 }
 
 .copyright {
-  font-size: 10px;
-  text-align: center;
-  color: #a3bb95;
+	font-size: 10px;
+	text-align: center;
+	color: #a3bb95;
 }
 
 /*--------------------------------
  下層：Worksページ
 ---------------------------------*/
 .article {
-  padding: 50px 0;
+	padding: 50px 0;
 }
 
 .article-inner {
-  max-width: 1040px;
-  margin: 0 auto;
-  padding: 0 20px;
+	max-width: 1040px;
+	margin: 0 auto;
+	padding: 0 20px;
 }
 
 .article-title {
-  margin-bottom: 20px;
-  text-align: center;
+	margin-bottom: 20px;
+	text-align: center;
 }
 
 .article-img {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .article-body {
-  max-width: 720px;
-  margin: 0 auto;
+	max-width: 720px;
+	margin: 0 auto;
 }
 
 .article-info-title {
-  font-size: 15px;
+	font-size: 15px;
 }
 
 .article-body img {
-  margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 .article-body p {
-  margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 .home-link {
-  text-align: center;;
+	text-align: center;
+	;
 }
 
 /*他ページ*/
-.article-title{
+.article-title {
 	padding-top: 30px;
 }
-.url{
+
+.url {
 	position: fixed;
 	background-color: #737d6d;
 	right: 50px;
@@ -354,11 +363,13 @@ li {
 	height: 100px;
 	border-radius: 50px;
 }
-.url p{
+
+.url p {
 	text-align: center;
 	height: 100%;
 }
-.url p a{
+
+.url p a {
 	display: flex;
 	width: 100%;
 	height: 100%;
@@ -371,108 +382,122 @@ li {
 /*media Queries 767
 ----------------------------------------------------*/
 @media screen and (max-width: 767px) {
-  body {
-    font-size: 13px;
-    line-height: 1.7;
-  }
+	body {
+		font-size: 13px;
+		line-height: 1.7;
+	}
 
-  .pc-only {
-    display: none;
-  }
+	.pc-only {
+		display: none;
+	}
 
-  .sp-only {
-    display: block;
-  }
+	.sp-only {
+		display: block;
+	}
 
-  /* 見出し */
-  .title {
-    font-size: 26px;
-    margin-bottom: 20px;
-  }
+	/* 見出し */
+	.title {
+		font-size: 26px;
+		margin-bottom: 20px;
+	}
 
-  /* レイアウト */
-  .section {
-    padding: 40px 0;
-  }
+	/* レイアウト */
+	.section {
+		padding: 40px 0;
+	}
 
-  .inner {
-    padding: 0 15px;
-  }
+	.inner {
+		padding: 0 15px;
+	}
 
-  /* ヘッダー */
-  .header-logo {
-    font-size: 16px;
-  }
+	/* ヘッダー */
+	.header-logo {
+		font-size: 16px;
+	}
 
-  .header-nav-item:not(:last-child) {
-    margin-right: 10px;
-  }
+	.header-nav-item:not(:last-child) {
+		margin-right: 10px;
+	}
 
-  .header-nav-item a {
-    font-size: 12px;
-  }
+	.header-nav-item a {
+		font-size: 12px;
+	}
 
-  /* プロフィール */
-  .prof{
-	  padding: 30px 0;
-  }
-  .profile {
-	padding: 0;
-    display: block;
-  }
-  .face{
-	  max-width: 300px;
-	  margin: 0 auto;
-  }
-  .profile .face img{
-	  margin: 0;
-  }
-  
-  .profile-title {
-    font-size: 20px;
-  }
+	/* プロフィール */
+	.prof {
+		padding: 30px 0;
+	}
 
-  /* Works */
-  .content{
-	  padding-top: 30px;
-  }
-  
-  .works-name {
-    font-size: 10px;
-  }
+	.profile {
+		padding: 0;
+		display: block;
+	}
 
-  .works-list {
-    justify-content: space-between;
-  }
+	.face {
+		max-width: 300px;
+		margin: 0 auto;
+	}
 
-  .works-item {
-    flex: 0 0 48%;
-    margin-right: 0;
-    margin-bottom: 30px;
-  }
+	.profile .face img {
+		margin: 0;
+	}
 
-  /* Skill */
-  .skill-list {
-    display: block;
-    margin-bottom: 0;
-  }
+	.profile-title {
+		font-size: 20px;
+	}
+	
+	.profile-text{
+		padding: 0 15px;
+	}
 
-  .skill-item {
-    width: 100%;
-    margin-bottom: 35px;
-  }
+	/* Works */
+	.content {
+		padding-top: 30px;
+	}
 
-  .skill-item:last-child {
-    margin-bottom: 0;
-  }
+	.works-name {
+		font-size: 10px;
+	}
 
-  /* Contact */
-  .contact-item {
-    margin: 0 10px;
-  }
+	.works-list {
+		display: block;
+		justify-content: space-between;
+	}
 
-  /* フッター */
-  .footer {
-    padding: 20px 0;
-  }
+	.works-item {
+		/*		flex: 0 0 48%;*/
+		/*		margin-right: 0;*/
+		/*		margin-bottom: 30px;*/
+		width: 90%;
+		margin: 0 auto 50px;
+	}
+	
+	.works-item:nth-of-type(3n) {
+	margin: 0 auto 50px;
+}
+
+	/* Skill */
+	.skill-list {
+		display: block;
+		margin-bottom: 0;
+	}
+
+	.skill-item {
+		width: 100%;
+		margin-bottom: 35px;
+	}
+
+	.skill-item:last-child {
+		margin-bottom: 0;
+	}
+
+	/* Contact */
+	.contact-item {
+		margin: 0 10px;
+	}
+
+	/* フッター */
+	.footer {
+		padding: 20px 0;
+	}
 }
